p2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one      
spec:
  selector:
    version: app-one
  ports:
  - protocol: TCP        
    port: 8080
    targetPort: 8080     
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-two      
spec:
  selector:
    version: app-two
  ports:
  - protocol: TCP        
    port: 8080
    targetPort: 8080     
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-three      
spec:
  selector:
    version: app-three
  ports:
  - protocol: TCP        
    port: 8080
    targetPort: 8080     
  type: ClusterIP
